new-website/css/main.css
/* Main.css
 * Rohan Mishra */
@import url(https://fonts.googleapis.com/css?family=Karla:400,700);
@import url(https://fonts.googleapis.com/css?family=Montserrat:700);

body {
    background-color: #FF527D;
    color: #000000;
    font-family: 'Karla', sans-serif;
    background-image: url(../assets/lines.png);
    background-size: 50%;
    background-position: center;
    background-repeat: repeat-y;
}

h1 {
    
}

a, h2, h3, p {
    font-size: 1.4em;
}

h2 {
    letter-spacing: 1px;
}

h3 {
    letter-spacing: 2px;
    font-family: 'Montserrat', sans-serif;
    color: #DCFF52;
}

/* General Link Styling */
a {
    font-weight: 400;
    color: #FFB4C7;
    letter-spacing: 0.1em;
}

a:hover {
    color: #FFB4C7;
    text-decoration: none;
}

span {
    position: relative;
    display: block;
    cursor: pointer;
}

span:before, span:after {
    content: '';
    position: absolute;
    width: 0%;
    height: 3px;
    top: 50%;
    margin-top: -0.5px;
    background: #000000;
}

span:before {
    left: -2.5px;
}

span:after {
    right: 2.5px;
    background: #000000;
    transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
}

span:hover:before {
    background: #000000;
    width: 100%;
    transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
}

span:hover:after {
    background: transparent;
    width: 100%;
    transition: 0s;
}

/* Navbar */
ul {
    list-style-type: none;
    margin: 0;
    width: 100vw;
    padding: 0 0 30vh 70px;
}

ul li {
    float: left;
}

ul li a {
    display: block;
    padding-top: 60px;
    padding-right: 10vw;
    font-weight: 400;
}

/* Intro Section */
.hello-wrapper {
    margin-left: -2em;
    margin-top: 14vh;
    overflow-y: hidden;
}

.hello {
    width: 120%;
    height: auto;
}

#adlib {
    margin-top: 2vh;
}

